--- a/src/app/user/admin/venue/venue.component.html
+++ b/src/app/user/admin/venue/venue.component.html
@@ -48,76 +48,107 @@
 
     <!-- Table -->
     <div class="overflow-x-auto border border-gray-200 rounded-lg shadow-md dark:border-gray-700">
-      <table class="min-w-full text-left divide-y divide-gray-200 dark:divide-gray-700" id="search-table" >
-        <thead class="bg-gray-50 dark:bg-gray-800">
-          <tr>
-            <th scope="col" class="px-6 py-3 text-xs font-semibold tracking-wider text-gray-700 uppercase dark:text-gray-300">
-              #
-            </th>
-            <th scope="col" class="px-6 py-3 text-xs font-semibold tracking-wider text-gray-700 uppercase dark:text-gray-300">
-               Name
-            </th>
-            <th scope="col" class="px-6 py-3 text-xs font-semibold tracking-wider text-gray-700 uppercase dark:text-gray-300">
-             Collage
-            </th>
-            <th scope="col" class="px-6 py-3 text-xs font-semibold tracking-wider text-gray-700 uppercase dark:text-gray-300">
-             Type
-            </th>
-              <th scope="col" class="px-6 py-3 text-xs font-semibold tracking-wider text-gray-700 uppercase dark:text-gray-300">
-             Capacity
-            </th>
-            <th scope="col" class="px-6 py-3 text-xs font-semibold tracking-wider text-gray-700 uppercase dark:text-gray-300">
-              Actions
-            </th>
-          </tr>
-        </thead>
-        <tbody class="bg-white divide-y divide-gray-200 dark:bg-gray-900 dark:divide-gray-700">
-          <tr *ngFor="let item of venue; let i = index" class="hover:bg-gray-100 dark:hover:bg-gray-800">
-  <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ item.id }}</td>
+  <!-- Search and Page Size -->
+<div class="flex items-center justify-between mb-4">
+  <input
+    type="text"
+    [(ngModel)]="searchText"
+    placeholder="Search..."
+    class="px-4 py-2 border rounded"
+  />
 
-  <td class="px-6 py-4">
-    <input *ngIf="editIndex === i" [(ngModel)]="item.name" class="w-full px-2 py-1 border rounded" />
-    <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.name }}</span>
-  </td>
-
-  <td class="px-6 py-4">
-    <input *ngIf="editIndex === i" [(ngModel)]="item.location" class="w-full px-2 py-1 border rounded" />
-    <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.location }}</span>
-  </td>
-
-  <td class="px-6 py-4">
-    <select *ngIf="editIndex === i" [(ngModel)]="item.type" class="w-full px-2 py-1 border rounded">
-           <option  value="CLASS">CLASS</option>
-            <option  value="LAB">LAB</option>
+  <label class="text-sm">
+    Show
+    <select [(ngModel)]="pageSize" (change)="currentPage = 1" class="px-2 py-1 border rounded ml-1">
+      <option [value]="10">10</option>
+      <option [value]="20">20</option>
+      <option [value]="filteredVenues.length">All</option>
     </select>
-    <span [(ngModel)]="item.type" *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.type }}</span>
-  </td>
+    entries
+  </label>
+</div>
 
-  <td class="px-6 py-4">
-    <input *ngIf="editIndex === i" type="number" [(ngModel)]="item.teaching_capacity" class="w-full px-2 py-1 border rounded" />
-    <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.teaching_capacity }}</span>
-  </td>
+<!-- Table -->
+<table class="min-w-full text-left divide-y divide-gray-200 dark:divide-gray-700">
+  <thead class="bg-gray-50 dark:bg-gray-800">
+    <tr>
+      <th scope="col" class="px-6 py-3 text-xs font-semibold tracking-wider text-gray-700 uppercase dark:text-gray-300">#</th>
+      <th scope="col" class="px-6 py-3 text-xs font-semibold tracking-wider text-gray-700 uppercase dark:text-gray-300">Name</th>
+      <th scope="col" class="px-6 py-3 text-xs font-semibold tracking-wider text-gray-700 uppercase dark:text-gray-300">Collage</th>
+      <th scope="col" class="px-6 py-3 text-xs font-semibold tracking-wider text-gray-700 uppercase dark:text-gray-300">Type</th>
+      <th scope="col" class="px-6 py-3 text-xs font-semibold tracking-wider text-gray-700 uppercase dark:text-gray-300">Capacity</th>
+      <th scope="col" class="px-6 py-3 text-xs font-semibold tracking-wider text-gray-700 uppercase dark:text-gray-300">Actions</th>
+    </tr>
+  </thead>
+  <tbody class="bg-white divide-y divide-gray-200 dark:bg-gray-900 dark:divide-gray-700">
 
-  <td class="px-6 py-4 whitespace-nowrap">
-    <ng-container *ngIf="editIndex !== i; else editing">
-      <button (click)="editIndex = i">    <span class="px-2 py-1 text-sm "><svg class="w-6 h-6 text-blue-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-  <path fill-rule="evenodd" d="M11.32 6.176H5c-1.105 0-2 .949-2 2.118v10.588C3 20.052 3.895 21 5 21h11c1.105 0 2-.948 2-2.118v-7.75l-3.914 4.144A2.46 2.46 0 0 1 12.81 16l-2.681.568c-1.75.37-3.292-1.263-2.942-3.115l.536-2.839c.097-.512.335-.983.684-1.352l2.914-3.086Z" clip-rule="evenodd"/>
-  <path fill-rule="evenodd" d="M19.846 4.318a2.148 2.148 0 0 0-.437-.692 2.014 2.014 0 0 0-.654-.463 1.92 1.92 0 0 0-1.544 0 2.014 2.014 0 0 0-.654.463l-.546.578 2.852 3.02.546-.579a2.14 2.14 0 0 0 .437-.692 2.244 2.244 0 0 0 0-1.635ZM17.45 8.721 14.597 5.7 9.82 10.76a.54.54 0 0 0-.137.27l-.536 2.84c-.07.37.239.696.588.622l2.682-.567a.492.492 0 0 0 .255-.145l4.778-5.06Z" clip-rule="evenodd"/>
-</svg>
-</span></button>
-    </ng-container>
-    <ng-template #editing>
-      <button (click)="updateVenue(item)" class="mr-2 text-green-600 hover:text-green-800">Save</button>
-      <button (click)="cancelEdit()" class="text-red-600 hover:text-red-800">Cancel</button>
-    </ng-template>
-  </td>
-</tr>
+    <tr *ngFor="let item of paginatedVenues; let i = index" class="hover:bg-gray-100 dark:hover:bg-gray-800">
+      <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ item.id }}</td>
 
-          <tr *ngIf="venue.length === 0">
-            <td colspan="4" class="px-6 py-4 italic text-center text-gray-500 dark:text-gray-400">No Venue found.</td>
-          </tr>
-        </tbody>
-      </table>
+      <td class="px-6 py-4">
+        <input *ngIf="editIndex === i" [(ngModel)]="item.name" class="w-full px-2 py-1 border rounded" />
+        <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.name }}</span>
+      </td>
+
+      <td class="px-6 py-4">
+        <input *ngIf="editIndex === i" [(ngModel)]="item.location" class="w-full px-2 py-1 border rounded" />
+        <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.location }}</span>
+      </td>
+
+      <td class="px-6 py-4">
+        <select *ngIf="editIndex === i" [(ngModel)]="item.type" class="w-full px-2 py-1 border rounded">
+          <option value="CLASS">CLASS</option>
+          <option value="LAB">LAB</option>
+        </select>
+        <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.type }}</span>
+      </td>
+
+      <td class="px-6 py-4">
+        <input *ngIf="editIndex === i" type="number" [(ngModel)]="item.teaching_capacity" class="w-full px-2 py-1 border rounded" />
+        <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.teaching_capacity }}</span>
+      </td>
+
+      <td class="px-6 py-4 whitespace-nowrap">
+        <ng-container *ngIf="editIndex !== i; else editing">
+          <button (click)="editIndex = i">
+            <span class="px-2 py-1 text-sm">
+              <!-- Edit icon SVG -->
+              <svg class="w-6 h-6 text-blue-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                <path fill-rule="evenodd" d="M11.32 6.176H5c-1.105 0-2 .949-2 2.118v10.588C3 20.052 3.895 21 5 21h11c1.105 0 2-.948 2-2.118v-7.75l-3.914 4.144A2.46 2.46 0 0 1 12.81 16l-2.681.568c-1.75.37-3.292-1.263-2.942-3.115l.536-2.839c.097-.512.335-.983.684-1.352l2.914-3.086Z" clip-rule="evenodd"/>
+                <path fill-rule="evenodd" d="M19.846 4.318a2.148 2.148 0 0 0-.437-.692 2.014 2.014 0 0 0-.654-.463 1.92 1.92 0 0 0-1.544 0 2.014 2.014 0 0 0-.654.463l-.546.578 2.852 3.02.546-.579a2.14 2.14 0 0 0 .437-.692 2.244 2.244 0 0 0 0-1.635ZM17.45 8.721 14.597 5.7 9.82 10.76a.54.54 0 0 0-.137.27l-.536 2.84c-.07.37.239.696.588.622l2.682-.567a.492.492 0 0 0 .255-.145l4.778-5.06Z" clip-rule="evenodd"/>
+              </svg>
+            </span>
+          </button>
+        </ng-container>
+        <ng-template #editing>
+          <div class="flex flex-col gap-2">
+               <button (click)="updateVenue(item)" class=" text-blue-500">Save</button>
+          <button (click)="cancelEdit()" class=" text-red-400">Cancel</button>
+
+          </div>
+
+        </ng-template>
+      </td>
+    </tr>
+
+    <tr *ngIf="venue.length === 0">
+      <td colspan="6" class="px-6 py-4 italic text-center text-gray-500 dark:text-gray-400">No Venue found.</td>
+    </tr>
+  </tbody>
+</table>
+
+<!-- Pagination Buttons -->
+<div class="flex justify-center mt-4 gap-2">
+  <button
+    *ngFor="let page of [].constructor(totalPages); let i = index"
+    (click)="currentPage = i + 1"
+    [class.bg-blue-600]="currentPage === i + 1"
+    class="px-3 py-1 text-sm border rounded hover:bg-blue-100"
+  >
+    {{ i + 1 }}
+  </button>
+</div>
+
     </div>
 
   </div>
