--- a/src/app/user/coordinator/coordinator-students/coordinator-students.component.html
+++ b/src/app/user/coordinator/coordinator-students/coordinator-students.component.html
@@ -1,15 +1,5 @@
 <div class="w-full h-full mt-24">
 
-      <!-- Loader -->
-    <div *ngIf="isLoading" class="flex items-center justify-center h-64">
-      <svg class="w-10 h-10 text-blue-500 animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-        <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8v8z"></path>
-      </svg>
-    </div>
-
-  <div  *ngIf="!isLoading" >
-
 
   <!-- Breadcrumb -->
   <nav class="justify-between px-4 py-3 mt-16 text-gray-700 border border-gray-200 rounded-lg sm:flex sm:px-5 bg-gray-50 dark:bg-gray-800 dark:border-gray-700" aria-label="Breadcrumb">
@@ -58,11 +48,30 @@
     </div> -->
 
 
-<div class="mt-6">
+<div class="flex items-center justify-between  mb-10 mt-5">
+
+    <input
+    type="text"
+    [(ngModel)]="searchText"
+    placeholder="Search..."
+    class="px-4 py-2 border rounded"
+  />
+
+  <label class="text-sm">
+    Show
+    <select [(ngModel)]="pageSize" (change)="currentPage = 1" class="px-2 py-1 border rounded ml-1">
+      <option [value]="10">10</option>
+      <option [value]="20">20</option>
+      <option [value]="filteredVenues.length">All</option>
+    </select>
+    entries
+  </label>
+</div>
 
 
 
-<table id="search-table">
+
+<table class=" w-full table table-hover table-striped" >
   <thead>
       <tr>
         <th>
@@ -111,59 +120,70 @@
 
       </tr>
   </thead>
- <tbody class="bg-white">
-  <ng-container *ngFor="let item of students">
-  <tr *ngIf="item.department.short_name === userData?.department">
+ <tbody >
 
+  <tr *ngFor="let item of paginatedVenues, let i = index">
 
     <td class="font-bold">{{ item.id }}</td>
     <!-- Programme -->
-    <td class="font-bold">
-      <ng-container *ngIf="editId === item.id; else showProgramme">
-        <input [(ngModel)]="editProgramme" class="border p-1 rounded w-full" />
-      </ng-container>
-      <ng-template #showProgramme>{{ item.programme }}</ng-template>
-    </td>
+       <td class="px-6 py-4">
+        <input *ngIf="editIndex === i" [(ngModel)]="item.programme" class="w-full px-2 py-1 border rounded" />
+        <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.programme }}</span>
+      </td>
 
     <!-- Programme Code -->
     <td class="font-bold">
-      <ng-container *ngIf="editId === item.id; else showCode">
-        <input [(ngModel)]="editCode" class="border p-1 rounded w-full" />
-      </ng-container>
-      <ng-template #showCode>{{ item.programme_code }}</ng-template>
+        <input *ngIf="editIndex === i" [(ngModel)]="item.programme_code" class="w-full px-2 py-1 border rounded" />
+        <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.programme_code }}</span>
     </td>
 
     <!-- Total Students -->
     <td class="font-bold">
-      <ng-container *ngIf="editId === item.id; else showTotal">
-        <input type="number" [(ngModel)]="editTotal" class="border p-1 rounded w-full" />
-      </ng-container>
-      <ng-template #showTotal>{{ item.total_students }}</ng-template>
+         <input *ngIf="editIndex === i" [(ngModel)]="item.total_students" class="w-full px-2 py-1 border rounded" />
+        <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.total_students }}</span>
     </td>
 
     <!-- Action Buttons -->
-    <td>
-      <div *ngIf="editId !== item.id">
-        <button (click)="openUpdateModal(item.id)" class="p-1 rounded hover:bg-gray-200 dark:hover:bg-gray-700">
-          <svg class="w-6 h-6 text-slate-700 dark:text-white" xmlns="http://www.w3.org/2000/svg"
-               fill="currentColor" viewBox="0 0 24 24">
-            <path fill-rule="evenodd"
-                  d="M5 8a4 4 0 1 1 7.796 1.263l-2.533 2.534A4 4 0 0 1 5 8Zm4.06 5H7a4 4 0 0 0-4 4v1a2 2 0 0 0 2 2h2.172a2.999 2.999 0 0 1-.114-1.588l.674-3.372a3 3 0 0 1 .82-1.533L9.06 13Zm9.032-5a2.907 2.907 0 0 0-2.056.852L9.967 14.92a1 1 0 0 0-.273.51l-.675 3.373a1 1 0 0 0 1.177 1.177l3.372-.675a1 1 0 0 0 .511-.273l6.07-6.07a2.91 2.91 0 0 0-.944-4.742A2.907 2.907 0 0 0 18.092 8Z"
-                  clip-rule="evenodd" />
-          </svg>
-        </button>
-      </div>
 
-      <div *ngIf="editId === item.id" class="flex gap-2">
-        <button (click)="saveEdit()" class="px-2 py-1 bg-blue-400 text-white rounded">Save</button>
-        <button (click)="cancelEdit()" class="px-2 py-1 bg-red-600 text-white rounded">Cancel</button>
-      </div>
-    </td>
+      <td class="px-6 py-4 whitespace-nowrap">
+        <ng-container *ngIf="editIndex !== i; else editing">
+          <button (click)="editIndex = i">
+            <span class="px-2 py-1 text-sm">
+              <!-- Edit icon SVG -->
+              <svg class="w-6 h-6 text-blue-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                <path fill-rule="evenodd" d="M11.32 6.176H5c-1.105 0-2 .949-2 2.118v10.588C3 20.052 3.895 21 5 21h11c1.105 0 2-.948 2-2.118v-7.75l-3.914 4.144A2.46 2.46 0 0 1 12.81 16l-2.681.568c-1.75.37-3.292-1.263-2.942-3.115l.536-2.839c.097-.512.335-.983.684-1.352l2.914-3.086Z" clip-rule="evenodd"/>
+                <path fill-rule="evenodd" d="M19.846 4.318a2.148 2.148 0 0 0-.437-.692 2.014 2.014 0 0 0-.654-.463 1.92 1.92 0 0 0-1.544 0 2.014 2.014 0 0 0-.654.463l-.546.578 2.852 3.02.546-.579a2.14 2.14 0 0 0 .437-.692 2.244 2.244 0 0 0 0-1.635ZM17.45 8.721 14.597 5.7 9.82 10.76a.54.54 0 0 0-.137.27l-.536 2.84c-.07.37.239.696.588.622l2.682-.567a.492.492 0 0 0 .255-.145l4.778-5.06Z" clip-rule="evenodd"/>
+              </svg>
+            </span>
+          </button>
+        </ng-container>
+        <ng-template #editing>
+          <div class="flex flex-col gap-2">
+               <button (click)="updateStudentProgram(item)" class=" text-blue-500">Save</button>
+          <button (click)="cancelEdit()" class=" text-red-400">Cancel</button>
+
+          </div>
+
+        </ng-template>
+      </td>
   </tr>
-  </ng-container>
+
 </tbody>
 
 </table>
+
+<!-- Pagination Buttons -->
+<div class="flex justify-center mt-4 gap-2">
+  <button
+    *ngFor="let page of [].constructor(totalPages); let i = index"
+    (click)="currentPage = i + 1"
+    [class.bg-blue-600]="currentPage === i + 1"
+    class="px-3 py-1 text-sm border rounded hover:bg-blue-100"
+  >
+    {{ i + 1 }}
+  </button>
+</div>
+
 
 </div>
 
@@ -185,7 +205,7 @@
 
 
          <div class="p-3 ">
-            <form (ngSubmit)="Insert_Program()" #Studentform="ngForm">
+            <form (ngSubmit)="insert_Program()" #Studentform="ngForm">
 
                    <div class="mt-4">
                   <label
@@ -306,73 +326,5 @@
 
 
 
- <div *ngIf="isUploadOpen" class="fixed inset-0 flex items-center justify-center bg-gray-200 bg-opacity-50 rounded-lg">
-  <div class="p-2 mt-20 bg-white rounded-lg shadow-lg " style="width: 500px;">
-
-    <div class="grid justify-between grid-flow-col">
-      <h3 class="mt-2 font-semibold text-md">Upload Students Programme</h3>
-      <div class="flex justify-end ">
-        <button (click)="closeUploadModal()" class="px-4 py-2 text-white bg-red-500 rounded hover:bg-red-600">
-          Close
-        </button>
-      </div>
-    </div>
 
 
-     <div class="p-3 ">
-
-      <div
-  class="upload-drop-zone"
-  (drop)="onFileDrop($event)"
-  (dragover)="onDragOver($event)"
-  (dragleave)="onDragLeave($event)"
-  [class.dragging]="isDragging"
->
-  <p *ngIf="!selectedFile">Drag & Drop Excel file here or <span (click)="fileInput.click()" class="click-here">click to select</span></p>
-  <p *ngIf="selectedFile">Selected file: {{ selectedFile.name }}</p>
-  <input type="file" #fileInput (change)="onFileSelected($event)" accept=".xlsx, .xls" hidden />
-</div>
-
-
-
-     </div>
-
-  </div>
-</div>
-
-
-
-<!-- Update Student Program Modal -->
-<div *ngIf="isUpdateModalOpen" class="fixed inset-0 z-50 flex items-center justify-center bg-gray-900 bg-opacity-50">
-  <div class="w-full max-w-md p-6 bg-white rounded-lg dark:bg-gray-800">
-    <h2 class="mb-4 text-xl font-semibold text-gray-800 dark:text-white">Update Student Program</h2>
-
-    <form (submit)="updateStudentProgram()">
-      <div class="mb-4">
-        <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">Program Name</label>
-        <input [(ngModel)]="selectedStudent.programme" name="programme" class="w-full p-2 mt-1 border rounded dark:bg-gray-700 dark:text-white" required>
-      </div>
-
-      <div class="mb-4">
-        <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">Total Students</label>
-        <input [(ngModel)]="selectedStudent.total_students" name="total_students" type="number" class="w-full p-2 mt-1 border rounded dark:bg-gray-700 dark:text-white" required>
-      </div>
-
-      <div class="mb-4">
-        <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">Coordinator ID</label>
-        <input [(ngModel)]="selectedStudent.coordinator_id" name="coordinator_id" type="number" class="w-full p-2 mt-1 border rounded dark:bg-gray-700 dark:text-white" required>
-      </div>
-
-      <div class="flex justify-end space-x-3">
-        <button type="button" (click)="closeUpdateModal()" class="px-4 py-2 text-gray-700 bg-gray-300 rounded hover:bg-gray-400 dark:bg-gray-600 dark:hover:bg-gray-500 dark:text-white">Cancel</button>
-        <button type="submit" class="px-4 py-2 text-white bg-blue-600 rounded hover:bg-blue-700">Update</button>
-      </div>
-    </form>
-  </div>
-</div>
-
-
-
- </div>
-
-</div>
