--- a/src/app/user/coordinator/coordinator-course/coordinator-course.component.html
+++ b/src/app/user/coordinator/coordinator-course/coordinator-course.component.html
@@ -53,8 +53,30 @@
 <div class="mt-6">
 
 
+  <div class="flex items-center justify-between  mb-10 mt-5">
 
-<table id="search-table">
+    <input
+    type="text"
+    [(ngModel)]="searchText"
+    placeholder="Search..."
+    class="px-4 py-2 border rounded"
+  />
+
+  <label class="text-sm">
+    Show
+    <select [(ngModel)]="pageSize" (change)="currentPage = 1" class="px-2 py-1 border rounded ml-1">
+      <option [value]="10">10</option>
+      <option [value]="20">20</option>
+      <option [value]="filteredCourse.length">All</option>
+    </select>
+    entries
+  </label>
+</div>
+
+
+
+
+<table class=" w-full">
 <thead>
   <tr>
     <th>
@@ -92,6 +114,15 @@
       </span>
   </th>
 
+      <th>
+      <span class="flex items-center">
+          Practical
+          <svg class="w-4 h-4 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m8 15 4 4 4-4m0-6-4-4-4 4"/>
+          </svg>
+      </span>
+  </th>
+
 
 <!--
 
@@ -107,19 +138,47 @@
 
   </tr>
 </thead>
-<tbody class="bg-white">
-  <ng-container *ngFor="let item of course_list; let i = index">
+<tbody>
+  <ng-container *ngFor="let item of paginatedVenues; let i = index">
     <tr *ngIf="item.department.short_name === userData?.department">
       <td class="font-bold">{{ i + 1 }}</td>
-      <td class="font-bold">{{ item.course_code }}</td>
-      <td class="font-bold">{{ item.course_name }}</td>
-      <td class="font-bold">{{ item.semester }}</td>
+      <td class="px-6 py-4 border border-gray-300">
+        <input *ngIf="editIndex === i" [(ngModel)]="item.course_code" class="w-full px-2 py-1 border rounded" />
+        <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.course_code }}</span>
+      </td>
+      <td class="px-6 py-4 border border-gray-300">
+        <input *ngIf="editIndex === i" [(ngModel)]="item.course_name" class="w-full px-2 py-1 border rounded" />
+        <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.course_name }}</span>
+      </td>
+     <td class="px-6 py-4 border border-gray-300">
+        <input *ngIf="editIndex === i" [(ngModel)]="item.semester" class="w-full px-2 py-1 border rounded" />
+        <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.semester }}</span>
+      </td>
+       <td class="px-6 py-4 border border-gray-300">
+        <input *ngIf="editIndex === i" [(ngModel)]="item.semester" class="w-full px-2 py-1 border rounded" />
+        <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300" ><i *ngIf="item.is_practical">Yes</i></span>
+      </td>
     </tr>
+
   </ng-container>
 </tbody>
 
 
 </table>
+
+
+<!-- Pagination Buttons -->
+<div class="flex justify-center mt-4 gap-2">
+  <button
+    *ngFor="let page of [].constructor(totalPages); let i = index"
+    (click)="currentPage = i + 1"
+    [class.bg-blue-600]="currentPage === i + 1"
+    class="px-3 py-1 text-sm border rounded hover:bg-blue-100"
+  >
+    {{ i + 1 }}
+  </button>
+</div>
+
 
 </div>
 
