--- a/src/app/user/coordinator/coordinator-instructors/coordinator-instructors.component.html
+++ b/src/app/user/coordinator/coordinator-instructors/coordinator-instructors.component.html
@@ -36,9 +36,31 @@
 
 <div class="mt-6">
 
-  <h2 class=" p-3 font-bold font-sans text-md ">    Department :     <span class="px-2 py-1 text-sm text-blue-600 bg-blue-100 rounded-full">  {{userData?.department}} </span></h2>
 
-<table id="search-table">
+
+  <h2 class=" p-3 font-bold font-sans text-md ">    Department :     <span class="px-2 py-1 text-sm text-blue-600 bg-blue-100 rounded-full">  {{userData?.department}} </span></h2>
+    <div class="flex items-center justify-between  mb-10 mt-5">
+
+    <input
+    type="text"
+    [(ngModel)]="searchText"
+    placeholder="Search..."
+    class="px-4 py-2 border rounded"
+  />
+
+  <label class="text-sm">
+    Show
+    <select [(ngModel)]="pageSize" (change)="currentPage = 1" class="px-2 py-1 border rounded ml-1">
+      <option [value]="10">10</option>
+      <option [value]="20">20</option>
+      <option [value]="filteredCourse.length">All</option>
+    </select>
+    entries
+  </label>
+</div>
+
+
+<table  class="w-full">
   <thead>
       <tr>
         <th>
@@ -116,43 +138,59 @@
 
       </tr>
   </thead>
-  <tbody class="bg-white">
+  <tbody >
 
-    <ng-container *ngFor="let item of instructors">
+     <ng-container *ngFor="let item of paginatedVenues; let i = index">
 
 
       <tr *ngIf="item.department.short_name === userData?.department">
-         <td class="font-bold">{{item.id}}</td>
-         <td class="font-bold">{{item.first_name}}</td>
-         <td class="font-bold">{{item.middle_name}}</td>
-         <td class="font-bold">{{item.last_name}}</td>
-          <td class="font-bold">{{item.gender}}</td>
-         <td class="font-bold">{{item.email}}</td>
-         <td class="font-bold">{{item.phone_number}}</td>
-         <!-- <td>
-          <div class="grid grid-cols-3 gap-1">
-            <a href="http://">
-              <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                <path stroke="currentColor" stroke-width="2" d="M21 12c0 1.2-4.03 6-9 6s-9-4.8-9-6c0-1.2 4.03-6 9-6s9 4.8 9 6Z"/>
-                <path stroke="currentColor" stroke-width="2" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
+          <td class="font-bold">{{ i + 1 }}</td>
+      <td class="px-6 py-4 border border-gray-300">
+        <input *ngIf="editIndex === i" [(ngModel)]="item.first_name" class="w-full px-2 py-1 border rounded" />
+        <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.first_name }}</span>
+      </td>
+      <td class="px-6 py-4 border border-gray-300">
+        <input *ngIf="editIndex === i" [(ngModel)]="item.middle_name" class="w-full px-2 py-1 border rounded" />
+        <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.middle_name }}</span>
+      </td>
+        <td class="px-6 py-4 border border-gray-300">
+        <input *ngIf="editIndex === i" [(ngModel)]="item.last_name" class="w-full px-2 py-1 border rounded" />
+        <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.last_name }}</span>
+      </td>
+         <td class="px-6 py-4 border border-gray-300">
+        <input *ngIf="editIndex === i" [(ngModel)]="item.gender" class="w-full px-2 py-1 border rounded" />
+        <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.gender }}</span>
+      </td>
+       <td class="px-6 py-4 border border-gray-300">
+        <input *ngIf="editIndex === i" [(ngModel)]="item.email" class="w-full px-2 py-1 border rounded" />
+        <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.email }}</span>
+      </td>
+        <td class="px-6 py-4 border border-gray-300">
+        <input *ngIf="editIndex === i" [(ngModel)]="item.phone_number" class="w-full px-2 py-1 border rounded" />
+        <span *ngIf="editIndex !== i" class="text-gray-800 dark:text-gray-300">{{ item.phone_number }}</span>
+      </td>
+         <td class="px-6 py-4 whitespace-nowrap border border-gray-300">
+        <ng-container *ngIf="editIndex !== i; else editing">
+          <button (click)="editIndex = i">
+            <span class="px-2 py-1 text-sm">
+              <!-- Edit icon SVG -->
+              <svg class="w-6 h-6 text-blue-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                <path fill-rule="evenodd" d="M11.32 6.176H5c-1.105 0-2 .949-2 2.118v10.588C3 20.052 3.895 21 5 21h11c1.105 0 2-.948 2-2.118v-7.75l-3.914 4.144A2.46 2.46 0 0 1 12.81 16l-2.681.568c-1.75.37-3.292-1.263-2.942-3.115l.536-2.839c.097-.512.335-.983.684-1.352l2.914-3.086Z" clip-rule="evenodd"/>
+                <path fill-rule="evenodd" d="M19.846 4.318a2.148 2.148 0 0 0-.437-.692 2.014 2.014 0 0 0-.654-.463 1.92 1.92 0 0 0-1.544 0 2.014 2.014 0 0 0-.654.463l-.546.578 2.852 3.02.546-.579a2.14 2.14 0 0 0 .437-.692 2.244 2.244 0 0 0 0-1.635ZM17.45 8.721 14.597 5.7 9.82 10.76a.54.54 0 0 0-.137.27l-.536 2.84c-.07.37.239.696.588.622l2.682-.567a.492.492 0 0 0 .255-.145l4.778-5.06Z" clip-rule="evenodd"/>
               </svg>
-            </a>
-
-            <svg class="w-6 h-6 text-green-400 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-              <path fill-rule="evenodd" d="M5 8a4 4 0 1 1 7.796 1.263l-2.533 2.534A4 4 0 0 1 5 8Zm4.06 5H7a4 4 0 0 0-4 4v1a2 2 0 0 0 2 2h2.172a2.999 2.999 0 0 1-.114-1.588l.674-3.372a3 3 0 0 1 .82-1.533L9.06 13Zm9.032-5a2.907 2.907 0 0 0-2.056.852L9.967 14.92a1 1 0 0 0-.273.51l-.675 3.373a1 1 0 0 0 1.177 1.177l3.372-.675a1 1 0 0 0 .511-.273l6.07-6.07a2.91 2.91 0 0 0-.944-4.742A2.907 2.907 0 0 0 18.092 8Z" clip-rule="evenodd"/>
-            </svg>
-
-            <svg class="w-6 h-6 text-red-600 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-              <path fill-rule="evenodd" d="M8.586 2.586A2 2 0 0 1 10 2h4a2 2 0 0 1 2 2v2h3a1 1 0 1 1 0 2v12a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V8a1 1 0 0 1 0-2h3V4a2 2 0 0 1 .586-1.414ZM10 6h4V4h-4v2Zm1 4a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Zm4 0a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Z" clip-rule="evenodd"/>
-            </svg>
-
+            </span>
+          </button>
+        </ng-container>
+        <ng-template #editing>
+          <div class="flex flex-col gap-2">
+               <button (click)="updateInstructor(item)" class=" text-blue-500">Save</button>
+          <button (click)="cancelEdit()" class=" text-red-400">Cancel</button>
 
           </div>
 
+        </ng-template>
+      </td>
 
-
-         </td>
- -->
 
 
     </tr>
@@ -161,6 +199,18 @@
 
   </tbody>
 </table>
+
+<!-- Pagination Buttons -->
+<div class="flex justify-center mt-4 gap-2">
+  <button
+    *ngFor="let page of [].constructor(totalPages); let i = index"
+    (click)="currentPage = i + 1"
+    [class.bg-blue-600]="currentPage === i + 1"
+    class="px-3 py-1 text-sm border rounded hover:bg-blue-100"
+  >
+    {{ i + 1 }}
+  </button>
+</div>
 
 
 </div>
