--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,6 +1,25 @@
 <div class="container mx-auto p-4">
-  <h1 class="text-2xl font-bold text-center mb-4 text-purple-800">UDOM TIMETABLE SYSTEM</h1>
-  <div class="bg-gray-100 p-4 rounded-lg shadow-lg">
+<div class="flex flex-col">
+  <h1 class="text-2xl font-bold text-center mb-4 text-purple-800">UDOM TIMETABLE SYSTEM </h1>
+  <div>
+    <a
+
+    href="/auth/login"
+
+      class="flex text-sm bg-gray-800 rounded-full focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+      aria-expanded="false"
+    >
+      <span class="sr-only">Login</span>
+      <img
+        class="w-8 h-8 rounded-full"
+        src="images/profile.gif"
+        alt="user photo"
+      />
+    </a>
+  </div>
+
+</div>
+  <div class="bg-gray-100 p-4 rounded-lg shadow-lg mt-5">
     <h2 class="text-lg font-semibold mb-2 text-gray-700">Timetable Downloads</h2>
     <div class="grid grid-cols-3 gap-4">
       <div>
