--- a/src/app/user/coordinator/coordinator-course/coordinator-course.component.html
+++ b/src/app/user/coordinator/coordinator-course/coordinator-course.component.html
@@ -53,7 +53,7 @@
 <div class="mt-6">
 
 
-  <div class="flex items-center justify-between  mb-10 mt-5">
+  <div class="flex items-center justify-between mt-5 mb-10">
 
     <input
     type="text"
@@ -64,7 +64,7 @@
 
   <label class="text-sm">
     Show
-    <select [(ngModel)]="pageSize" (change)="currentPage = 1" class="px-2 py-1 border rounded ml-1">
+    <select [(ngModel)]="pageSize" (change)="currentPage = 1" class="px-2 py-1 ml-1 border rounded">
       <option [value]="10">10</option>
       <option [value]="20">20</option>
       <option [value]="filteredCourse.length">All</option>
@@ -76,7 +76,7 @@
 
 
 
-<table class=" w-full">
+<table class="w-full ">
 <thead>
   <tr>
     <th>
@@ -168,7 +168,7 @@
 
 
 <!-- Pagination Buttons -->
-<div class="flex justify-center mt-4 gap-2">
+<div class="flex justify-center gap-2 mt-4">
   <button
     *ngFor="let page of [].constructor(totalPages); let i = index"
     (click)="currentPage = i + 1"
@@ -303,19 +303,19 @@
           </div>
 
 
-          <div class="mt-4 grid grid-flow-col gap-2 ">
+          <div class="grid grid-flow-col gap-2 mt-4 ">
 
-<div class="flex items-center ps-4 border border-gray-200 rounded-sm dark:border-gray-700 gap-2">
-    <input id="bordered-checkbox-1" type="checkbox"  [(ngModel)]="is_tutorial" checked disabled="" name="is_tutorial" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-    <label for="bordered-checkbox-1" class="w-full py-4 ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Tutorial</label>
+<div class="flex items-center gap-2 border border-gray-200 rounded-sm ps-4 dark:border-gray-700">
+    <input id="bordered-checkbox-1" type="checkbox"  [(ngModel)]="is_tutorial"  name="is_tutorial" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+    <label for="bordered-checkbox-1" class="w-full py-4 text-sm font-medium text-gray-900 ms-2 dark:text-gray-300">Tutorial</label>
 </div>
-<div class="flex items-center ps-4 border border-gray-200 rounded-sm dark:border-gray-700">
-    <input checked id="bordered-checkbox-2" type="checkbox" [(ngModel)]="is_lecture" checked disabled="" name="is_lecture" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-    <label for="bordered-checkbox-2" class="w-full py-4 ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Lecture</label>
+<div class="flex items-center border border-gray-200 rounded-sm ps-4 dark:border-gray-700">
+    <input checked id="bordered-checkbox-2" type="checkbox" [(ngModel)]="is_lecture" disabled="" name="is_lecture" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+    <label for="bordered-checkbox-2" class="w-full py-4 text-sm font-medium text-gray-900 ms-2 dark:text-gray-300">Lecture</label>
 </div>
-<div class="flex items-center ps-4 border border-gray-200 rounded-sm dark:border-gray-700">
+<div class="flex items-center border border-gray-200 rounded-sm ps-4 dark:border-gray-700">
     <input checked id="bordered-checkbox-2" type="checkbox" [(ngModel)]="is_practical"  name="is_practical" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-    <label for="bordered-checkbox-2" class="w-full py-4 ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Practical</label>
+    <label for="bordered-checkbox-2" class="w-full py-4 text-sm font-medium text-gray-900 ms-2 dark:text-gray-300">Practical</label>
 </div>
 
           </div>
