--- a/src/app/user/timetable-master/t-master-sidebar/t-master-sidebar.component.html
+++ b/src/app/user/timetable-master/t-master-sidebar/t-master-sidebar.component.html
@@ -81,7 +81,7 @@
 
       <li>
         <a
-        [routerLink]="['/user/timetable-master/collagemanagement']"
+        [routerLink]="['/user/timetable-master/collegemanagement']"
           routerLinkActive="active-link"
           [routerLinkActiveOptions]="{ exact: true }"
           class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-blue-400 hover:m-3 group">
@@ -91,7 +91,7 @@
   <path fill-rule="evenodd" d="M20.7071 15.2929c.3905.3905.3905 1.0237 0 1.4142l-4 4c-.3905.3905-1.0237.3905-1.4142 0l-2-2c-.3905-.3905-.3905-1.0237 0-1.4142.3905-.3905 1.0237-.3905 1.4142 0L16 18.5858l3.2929-3.2929c.3905-.3905 1.0237-.3905 1.4142 0Z" clip-rule="evenodd"/>
 </svg>
 
-          <span class="flex-1 text-white ms-3 whitespace-nowrap">Collages</span>
+          <span class="flex-1 text-white ms-3 whitespace-nowrap">Colleges</span>
         </a>
       </li>
 
